<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <RelativeLayout
            android:id="@+id/rl_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_photo_detail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                app:civ_border_color="#FF909090"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/txt_user_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_photo_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_user_name_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="26dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_name_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/follower"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_follower"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/company"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_location"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/repository"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_below="@+id/txt_repository"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_baseline_share_24"
                    android:text="@string/share"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_fav_unfav"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_baseline_favorite_24"
                    android:text="@string/tambahkan_ke_favorite"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBarDetail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:visibility="visible" />
        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_user"
            android:paddingBottom="10dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabs" />
    </RelativeLayout>

</ScrollView>